refatoração de algoritmos